--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,10 @@
-name=DigiFont Library
-version=1.0.3
+name=DigiFont
+version=1.1.0
 author=Pawel A. Hernik
 maintainer=Pawel A. Hernik <pawelhernik123@gmail.com>
-sentence=DigiFont Library
-paragraph=DigiFont Library
+sentence=Scalable 7-segment font
+paragraph=All digits 0..9 and A..F are rendered using lines or rectangles
 category=Display
 url=https://github.com/cbm80amiga/DigiFont
 architectures=*
+depends=Adafruit GFX Library
