New frame feature and new demos for ST7789

--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=1.1.0
 author=Pawel A. Hernik
 maintainer=Pawel A. Hernik <pawelhernik123@gmail.com>
 sentence=Scalable 7-segment font
-paragraph=All digits 0..9 and A..F are rendered using lines or rectangles
+paragraph=All digits 0..9 and extra characters are rendered using lines or rectangles
 category=Display
 url=https://github.com/cbm80amiga/DigiFont
 architectures=*
